Add controller and tempalte

--- a/views/breeder_menus.xml
+++ b/views/breeder_menus.xml
@@ -1,11 +1,11 @@
 <odoo>
     <!-- Top menu item -->
-    <menuitem name="Cat Breeder Cattery" id="cat_breeder"/>
+    <menuitem name="Cat Cattery" id="cat_breeder"/>
     <!-- menu categories -->
     <!-- <menuitem name="Kittens" id="breeder.menu_1" parent="breeder.menu_root"/> -->
     <!-- Action to open the Book list -->
     <record id="action_breeder_kitten" model="ir.actions.act_window">
-        <field name="name">Available Kittens</field>
+        <field name="name">Kittens</field>
         <field name="res_model">cat_breeder.kitten</field>
         <field name="view_mode">tree,form</field>
     </record>
