--- a/views/breeder_kitten_views.xml
+++ b/views/breeder_kitten_views.xml
@@ -1,42 +1,64 @@
 <odoo>
-  <data>
-    <!-- explicit list view definition -->
-<!--
-    <record model="ir.ui.view" id="cat_breeder.list">
-      <field name="name">cat_breeder list</field>
-      <field name="model">cat_breeder.cat_breeder</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
--->
 
-    <!-- Action to open the Book list -->
-    <record id="action_library_book" model="ir.actions.act_window">
-      <field name="name">Library Books</field>
-      <field name="res_model">library.book</field>
-      <field name="view_mode">tree,form</field>
-    </record>
+  <!--tree -->
+  <record model="ir.ui.view" id="breeder_kitten_view_tree">
+    <field name="name">breeder.kitten.tree</field>
+    <field name="model">cat_breeder.kitten</field>
+    <field name="arch" type="xml">
+      <tree>
+        <field name="name"/>
+        <field name="breed"/>
+        <field name="gender"/>
+        <field name="age"/>
+      </tree>
+    </field>
+  </record>
+<!-- Form -->
+  <record model="ir.ui.view" id="breeder_kitten_view_form">
+    <field name="name">breeder.kitten.form</field>
+    <field name="model">cat_breeder.kitten</field>
+    <field name="arch" type="xml">
+      <form string="Kitten">
+        <field name="state" invisible="True"/>
+        <header>
+          <button name="action_adopt" string="Adopt me!" type="object" invisible="state != 'available'"/>
+        </header>
+        <sheet>
+          <div class="oe_title">
+            <h1>
+              <field name="name"/>
+            </h1>
+          </div>
+          <div>
+            <field name="image" widget="image"/> 
+          </div>
+          <group>
+            <group>
+              <field name="breed"/>
+              <field name="gender"/>
+              <field name="birth_date"/>
+            </group>
+            <group>
+              <field name="age"/>
+              <field name="color"/>
+              <field name="temperament"/>
+            </group>
+          </group>
+        </sheet>
+      </form>
+    </field>
+  </record>
 
+  <!-- Search -->
+  <record id="view_search_book" model="ir.ui.view">
+    <field name="name">breeder.kitten.search</field>
+    <field name="model">cat_breeder.kitten</field>
+    <field name="arch" type="xml">
+      <search>
+        <field name="breed"/>
+        <filter name="filter_available" string="Available" domain="[('state', '=', 'available')]"/>
+      </search>
+    </field>
+  </record>
 
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="cat_breeder.action_server">
-      <field name="name">cat_breeder server</field>
-      <field name="model_id" ref="model_cat_breeder_cat_breeder"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
-      </field>
-    </record>
--->
-  </data>
 </odoo>
