--- a/views/breeder_breed_views.xml
+++ b/views/breeder_breed_views.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <odoo>
 
   <!--tree -->
@@ -28,7 +30,7 @@
     <field name="model">cat_breeder.breed</field>
     <field name="arch" type="xml">
       <search>
-        <field name="breed"/>
+        <field name="name"/>
       </search>
     </field>
   </record>
