--- a/views/breeder_kitten_list_template.xml
+++ b/views/breeder_kitten_list_template.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <odoo>
     <template id="breeder_kitten_list_template" name="breeder_kitten_list">
         <div id="wrap" class="container">
