--- a/views/breeder_menus.xml
+++ b/views/breeder_menus.xml
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <odoo>
     <!-- Top menu item -->
-    <menuitem id="cat_breeder" name="Cat Cattery">
+    <menuitem id="cat_breeder_menu_root" name="Cat Cattery">
         <menuitem id="cat_breeder_first_level_menu" name="Kittens" sequence="5">
             <!-- action item -->
             <menuitem id="cat_breeder_kitten_action" action="action_breeder_kitten" sequence="5"/>
