--- a/report/breeder_kitten_report_templates.xml
+++ b/report/breeder_kitten_report_templates.xml
@@ -7,7 +7,7 @@
                 <div class="page">
                     <!-- Report header content -->
                     <div class="container">
-                        <div class="row bg-primary">
+                        <div class="row bg-primary py-2" style="color: magenta">
                             <div class="col-3">Portrait</div>
                             <div class="col-2">Name</div>
                             <div class="col-2">Breed</div>
@@ -17,11 +17,11 @@
                         </div>
                     <!-- Report content -->
                         <t t-foreach="docs" t-as="o">
-                            <div class="row">
+                            <div class="row mt-2">
                                 <div class="col-3">
                                     <span t-field="o.image" 
                                     t-options="{'widget': 'image',
-                                    'style': 'max-width: 32px'}"/>
+                                    'style': 'max-width: 100px'}"/>
                                 </div>
                                 <div class="col-2">
                                     <span t-field="o.name" />
@@ -41,8 +41,8 @@
                             </div>
                         </t>
                         <!-- Report footer content -->
-                        <div class="row">
-                            <div class="col-4">
+                        <div class="row col-4 py-5">
+                            <div>
                                 Total Kittens: <t t-out="len(docs)" />
                             </div>
                             <div class="col-4" />
