--- a/report/breeder_kitten_report_templates.xml
+++ b/report/breeder_kitten_report_templates.xml
@@ -8,44 +8,44 @@
                     <!-- Report header content -->
                     <div class="container">
                         <div class="row bg-primary py-2" style="color: magenta">
-                            <div class="col-3">Portrait</div>
+                            <div class="col-4">Portrait</div>
                             <div class="col-2">Name</div>
                             <div class="col-2">Breed</div>
-                            <div class="col-1">Age</div>
+                            <div class="col-2">Age</div>
                             <div class="col-2">Color</div>
-                            <div class="col-2">State</div>
                         </div>
                     <!-- Report content -->
                         <t t-foreach="docs" t-as="o">
-                            <div class="row mt-2">
-                                <div class="col-3">
-                                    <span t-field="o.image" 
-                                    t-options="{'widget': 'image',
-                                    'style': 'max-width: 100px'}"/>
+                            <t t-if="o.state == 'adopted'">
+                                <div class="row mt-2">
+                                    <div class="col-4">
+                                        <span t-field="o.image" 
+                                        t-options="{'widget': 'image',
+                                        'style': 'max-width: 150px'}"/>
+                                    </div>
+                                    <div class="col-2">
+                                        <span t-field="o.name" />
+                                    </div>
+                                    <div class="col-2">
+                                        <span t-field="o.breed_id" />
+                                    </div>
+                                    <div class="col-2">
+                                        <span t-field="o.age" /> Weeks
+                                    </div>
+                                    <div class="col-2">
+                                        <span t-field="o.color" />
+                                    </div>
                                 </div>
-                                <div class="col-2">
-                                    <span t-field="o.name" />
-                                </div>
-                                <div class="col-2">
-                                    <span t-field="o.breed_id" />
-                                </div>
-                                <div class="col-1">
-                                    <span t-field="o.age" />
-                                </div>
-                                <div class="col-2">
-                                    <span t-field="o.color" />
-                                </div>
-                                <div class="col-2">
-                                    <span t-field="o.state" />
-                                </div>
-                            </div>
+                            </t>
                         </t>
                         <!-- Report footer content -->
-                        <div class="row col-4 py-5">
-                            <div>
+                        <div class="row py-5">
+                            <div class="col-4">
                                 Total Kittens: <t t-out="len(docs)" />
                             </div>
-                            <div class="col-4" />
+                            <div class="col-4">
+                                Available Kittens: <t t-out="len([o for o in docs if o.state == 'available'])" />
+                            </div>
                             <div class="col-4">
                                 Adopted Kittens: <t t-out="len([o for o in docs if o.state == 'adopted'])" /> 
                             </div>
