--- a/report/cattery_adopter_report.xml
+++ b/report/cattery_adopter_report.xml
@@ -3,7 +3,7 @@
         <field name="name">Kittens by Adopter</field>
         <field name="model">res.partner</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">cat_breeder.adopter_report</field>
+        <field name="report_name">cat_cattery.adopter_report</field>
         <field name="binding_model_id" ref="base.model_res_partner" />
         <field name="binding_type">report</field>
     </record>
