--- a/views/cattery_kitten_views.xml
+++ b/views/cattery_kitten_views.xml
@@ -2,9 +2,9 @@
 <odoo>
 
   <!--tree -->
-  <record model="ir.ui.view" id="breeder_kitten_view_tree">
-      <field name="name">breeder.kitten.tree</field>
-      <field name="model">cat_breeder.kitten</field>
+  <record model="ir.ui.view" id="cattery_kitten_view_tree">
+      <field name="name">cattery.kitten.tree</field>
+      <field name="model">cat_cattery.kitten</field>
       <field name="arch" type="xml">
           <tree>
               <field name="name"/>
@@ -15,9 +15,9 @@
       </field>
   </record>
 <!-- Form -->
-  <record model="ir.ui.view" id="breeder_kitten_view_form">
-    <field name="name">breeder.kitten.form</field>
-    <field name="model">cat_breeder.kitten</field>
+  <record model="ir.ui.view" id="cattery_kitten_view_form">
+    <field name="name">cattery.kitten.form</field>
+    <field name="model">cat_cattery.kitten</field>
     <field name="arch" type="xml">
       <form string="Kitten">
         <header>
@@ -46,9 +46,6 @@
             <group>
               <field name="state"/>
             </group>
-            <group>
-              <field name="adopter_id"/>
-            </group>
           </group>
         </sheet>
       </form>
@@ -56,9 +53,9 @@
   </record>
 
   <!-- Kanban -->
-  <record id="breeder_kitten_view_kanban" model="ir.ui.view">
-      <field name="name">breeder.kitten.kanban</field>
-      <field name="model">cat_breeder.kitten</field>
+  <record id="cattery_kitten_view_kanban" model="ir.ui.view">
+      <field name="name">cattery.kitten.kanban</field>
+      <field name="model">cat_cattery.kitten</field>
       <field name="arch" type="xml">
           <kanban string="Kittens" default_group_by="breed_id" records_draggable="0" widget="many2one_tags">
               <field name="state"/>
@@ -93,8 +90,8 @@
 
   <!-- Search -->
   <record id="view_search_kitten" model="ir.ui.view">
-      <field name="name">breeder.kitten.search</field>
-      <field name="model">cat_breeder.kitten</field>
+      <field name="name">cattery.kitten.search</field>
+      <field name="model">cat_cattery.kitten</field>
       <field name="arch" type="xml">
           <search>
               <field name="breed_id"/>
@@ -104,9 +101,9 @@
   </record>
 
   <!-- Action -->
-  <record id="action_breeder_kitten" model="ir.actions.act_window">
+  <record id="action_cattery_kitten" model="ir.actions.act_window">
       <field name="name">Kittens</field>
-      <field name="res_model">cat_breeder.kitten</field>
+      <field name="res_model">cat_cattery.kitten</field>
       <field name="view_mode">tree,kanban,form</field>
       <field name="help" type="html">
         <p class="o_view_nocontent_smiling_face">
