--- a/views/cattery_breed_views.xml
+++ b/views/cattery_breed_views.xml
@@ -5,7 +5,7 @@
   <!--tree -->
   <record model="ir.ui.view" id="cattery_breed_view_tree">
     <field name="name">cattery.breed.tree</field>
-    <field name="model">cat_cattery.breed</field>
+    <field name="model">cattery.breed</field>
     <field name="arch" type="xml">
       <tree>
         <field name="name"/>
@@ -16,7 +16,7 @@
   <!-- Form -->
   <record model="ir.ui.view" id="cattery_breed_view_form">
     <field name="name">cattery.breed.form</field>
-    <field name="model">cat_cattery.breed</field>
+    <field name="model">cattery.breed</field>
     <field name="arch" type="xml">
       <form string="Breed">
         <field name="name"/>
@@ -27,7 +27,7 @@
   <!-- Search -->
   <record id="view_search_breed" model="ir.ui.view">
     <field name="name">cattery.breed.search</field>
-    <field name="model">cat_cattery.breed</field>
+    <field name="model">cattery.breed</field>
     <field name="arch" type="xml">
       <search>
         <field name="name"/>
@@ -38,7 +38,7 @@
   <!-- Action -->
   <record id="action_cattery_breed" model="ir.actions.act_window">
     <field name="name">Breeds</field>
-    <field name="res_model">cat_cattery.breed</field>
+    <field name="res_model">cattery.breed</field>
     <field name="view_mode">tree,form</field>
   </record>
 </odoo>
