--- a/report/cattery_adopter_report.xml
+++ b/report/cattery_adopter_report.xml
@@ -1,9 +1,9 @@
 <odoo>
-    <record id="action_publisher_report" model="ir.actions.report">
+    <record id="action_adopter_report" model="ir.actions.report">
         <field name="name">Kittens by Adopter</field>
         <field name="model">res.partner</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">cat_cattery.adopter_report</field>
+        <field name="report_name">cattery.adopter_report</field>
         <field name="binding_model_id" ref="base.model_res_partner" />
         <field name="binding_type">report</field>
     </record>
@@ -16,8 +16,7 @@
                         <t t-foreach="adopter_kittens" t-as="group">
                             <div class="py-3" style="text-align: center;">
                                 <h2 t-field="group[0].name" />
-                                <span t-field="group[0].image_1920" 
-                                    t-options="{'widget': 'image',
+                                <span t-field="group[0].image_1920" t-options="{'widget': 'image',
                                     'style': 'max-width: 300px'}"/>
                             </div>
                             <div class="py-3">
@@ -25,10 +24,11 @@
                                 <ul>
                                     <t t-foreach="group[1]" t-as="kitten">
                                         <li class="mt-2">
-                                            <span t-field="kitten.image" 
-                                                t-options="{'widget': 'image',
+                                            <span t-field="kitten.image" t-options="{'widget': 'image',
                                                 'style': 'max-width: 50px'}"/>
-                                            <b><span t-field="kitten.name" /></b>,
+                                            <b>
+                                                <span t-field="kitten.name" />
+                                            </b>,
                                             <span t-field="kitten.breed_id" />
                                         </li>
                                     </t>
